@@ -8,6 +8,7 @@ Changelog for pdoTools.
 - Improved method pdoTools::makePlaceholders().
 - Accelerated snippet pdoNeighbors.
 - Fixed bug in pdoUsers when usersgroups was specified by names.
+- getObject and getCollection() runs in separate instance.
 - Added pdoParser.
 - [#24] Fixed prepareTVs and empty tvPrefix.
 - [#23] [pdoResources] Ability to return ids to placeholder.
